$Id$                       -*-text-*-

**** 0.69 ??? ??, 2012

Fix rt.cpan.org #74493

	Read correct resolver configuration in OS/2.


**** 0.68 Jan 30, 2012

Fix rt.cpan.org #72314
	
	Let a Net::DNS::Nameserver bind on Net::DNS::Nameserver::DEFAULT_ADDR
	as a last resort.

Fix to suppress false warnings about subroutine profiles on ancient
	versions of perl.

Fix to avoid constants with value undef which prevents unwanted code from being
	optimized away on ancient versions of perl.

Fix code error in PTR.pm, canonical RDATA not downcased.

Enhancement to clarify the function of parse and data methods, by renaming them
	to decode and encode respectively.

Feature IDN query support.

	Question.pm modified to use the recently introduced DomainName.pm
	module to represent DNS names.  Queries for domain names containing
	non-ASCII characters are now possible on Unicode platforms with CPAN 
	Net::LibIDN installed.

Introduction of Mailbox.pm module that will be used in the future to represent 
	RDATA components containing DNS coded RFC822 mailbox addresses.

Introduction of Text.pm module that will be used in the future to represent
	RDATA components containing text.


**** 0.67 Nov 4, 2011

Enhancement rt.cpan.org #60726

        On Cygwin Net::DNS now builds without Win32::IPHelper, unless a 
        previous version is updated that did use it. 
        The choice may also be set by the --iphelper or --noiphelper option
        to Makefile.PL.

Fix to suppress IO::Socket::INET(6)::peerhost usage with TCP. On some systems
        it doesn't work after receiving data.

Enhancement rt.cpan.org #43142

        Allow ReplyHandlers to indicate that no answer should be returned
        by the Net::DNS::Nameserver.

Fix rt.cpan.org #71796

	Prevent TCP accepts from blocking on unfinished 3-way handshakes.

Fix rt.cpan.org #65607

	Make 64bits windows work by depending on Win32::IPHelper version 0.07
	Thanks to Lian Wan Situ.

Fix rt.cpan.org #66470
