@@ -2,6 +2,10 @@ $Id$                       -*-text-*-
 
 **** 0.69 ??? ??, 2012
 
+Fix rt.cpan.org #75330
+
+	Also try nameserver without glue (as a last resort) when recursing.
+
 Fix rt.cpan.org #74493
 
 	Read correct resolver configuration in OS/2.
